<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/已修改"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="68dp"
        android:text="@string/個人資料"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="160dp"
        android:text="@string/姓名"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="264dp"
        android:layout_marginBottom="20dp"
        android:text="@string/密碼"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/PasswordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="372dp"
        android:layout_marginBottom="20dp"
        android:text="@string/電子郵件"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/EmailText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="480dp"
        android:layout_marginBottom="20dp"
        android:text="@string/電話"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/PhoneNumberText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/NameText"
        android:layout_width="243dp"
        android:layout_height="28dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="start|center_vertical"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/PasswordText"
        android:layout_width="243dp"
        android:layout_height="28dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="20dp"
        android:gravity="start|center_vertical"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="242dp"
        android:layout_height="29dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="20dp"
        android:gravity="start|center_vertical"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/PhoneNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/PhoneNumberText"
        android:layout_width="243dp"
        android:layout_height="28dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:gravity="start|center_vertical"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNumber" />

    <Button
        android:id="@+id/NameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/修改"
        app:layout_constraintBaseline_toBaselineOf="@+id/NameText"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/PasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/修改2"
        app:layout_constraintBaseline_toBaselineOf="@+id/PasswordText"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/EmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/修改3"
        app:layout_constraintBaseline_toBaselineOf="@+id/EmailText"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/PhoneNumberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/修改4"
        app:layout_constraintBaseline_toBaselineOf="@+id/PhoneNumberText"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>